all 21 pieces work as intended.

--- a/Blockus-Client/Blockus-Client.csproj
+++ b/Blockus-Client/Blockus-Client.csproj
@@ -62,6 +62,24 @@
     <Compile Include="Blocks\Block01.cs" />
     <Compile Include="Blocks\Block02.cs" />
     <Compile Include="Blocks\Block03.cs" />
+    <Compile Include="Blocks\Block04.cs" />
+    <Compile Include="Blocks\Block05.cs" />
+    <Compile Include="Blocks\Block06.cs" />
+    <Compile Include="Blocks\Block07.cs" />
+    <Compile Include="Blocks\Block08.cs" />
+    <Compile Include="Blocks\Block09.cs" />
+    <Compile Include="Blocks\Block10.cs" />
+    <Compile Include="Blocks\Block11.cs" />
+    <Compile Include="Blocks\Block12.cs" />
+    <Compile Include="Blocks\Block13.cs" />
+    <Compile Include="Blocks\Block14.cs" />
+    <Compile Include="Blocks\Block15.cs" />
+    <Compile Include="Blocks\Block16.cs" />
+    <Compile Include="Blocks\Block17.cs" />
+    <Compile Include="Blocks\Block18.cs" />
+    <Compile Include="Blocks\Block19.cs" />
+    <Compile Include="Blocks\Block20.cs" />
+    <Compile Include="Blocks\Block21.cs" />
     <Compile Include="Blocks\BlockFactory.cs" />
     <Compile Include="Blocks\BlockTemplate.cs" />
     <Compile Include="Connected Services\BlockusService\Reference.cs">
